--- a/functions/package.json
+++ b/functions/package.json
@@ -14,8 +14,10 @@
   },
   "main": "index.js",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.1"
+    "firebase-functions": "^3.6.1",
+    "twilio": "^3.49.4"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
